<resources>
    <string name="app_name">GitU</string>
    <string name="username">UserName</string>
    <string name="search_hint">Search Github User</string>
    <string name="name">name</string>
    <string name="following">%d Following</string>
    <string name="followers">%d Followers</string>
    <string name="tab_name_1">Followers</string>
    <string name="tab_name_2">Following</string>
    <string name="user_not_found">User Not Found</string>
    <string name="avatar_profile_picture">Avatar Profile Picture</string>
    <string name="favorite_list">Favorite List</string>
    <string name="don_t_have_any_favorite_yet">Don\'t have any Favorite yet</string>
    <string name="theme_switch">Theme Switch</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="github_logo">Github Logo</string>
    <string name="error_logo">Error Logo</string>
    <string name="favorite_user_list">Favorite User List</string>
</resources>